--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>RESTA API trening</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <header>
+        <h1>Where in the world?</h1>
+    </header>
+    <main id="root"></main>
+    <script type="module" src="dom.utils.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
