--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <input type="text"
         autocomplete="off"
         placeholder="phone number"
+        id="phone-number"
         />
         <button id="add-contact">+</button>
     </div>
